# telegram-mcp-server

./: .pre-commit-config.yaml  LICENSE  README.md
mcp-server/: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  server.py
mcp-server/alembic/: env.py
mcp-server/alembic/versions/: a9532af5fbed_create_new_items.py
mcp-server/app/: config.py
mcp-server/app/database/: database.py  models.py
mcp-server/app/schemas/: schemas.py
mcp-telegram-client/: main.py  pyproject.toml
telegram-app/: main.py  pyproject.toml
